// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal demo -- closable 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    closable=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    closable=false
  </button>
</div>
`;

exports[`Modal demo -- customClassName 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    custom className
  </button>
</div>
`;

exports[`Modal demo -- customStyle 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    custom style
  </button>
</div>
`;

exports[`Modal demo -- destroyOnClose 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    click
  </button>
</div>
`;

exports[`Modal demo -- keyboard 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    keyboard=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    keyboard=false
  </button>
</div>
`;

exports[`Modal demo -- mask 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    mask=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    mask=false
  </button>
</div>
`;

exports[`Modal demo -- maskClosable 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    maskClosable=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    maskClosable=false
  </button>
</div>
`;

exports[`Modal demo -- method 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    alert
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    confirm
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    promise alert
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    promise confirm
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  />
</div>
`;

exports[`Modal demo -- modal 1`] = `
.emotion-109 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-109:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-107 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-107 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-29 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-29 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-29 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-29 .uc-fe-switch-tip-on,
.emotion-29 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-29 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29:hover {
  border-color: #3357df;
}

.emotion-29:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-29 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-29 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-29 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-29 .uc-fe-switch-tip-on,
.emotion-29 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-29 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-29 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-29 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-40 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-40 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-40 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-40 .uc-fe-switch-tip-on,
.emotion-40 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-40 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-40:hover {
  border-color: #3357df;
}

.emotion-40:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-40 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-40 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-40 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-40 .uc-fe-switch-tip-on,
.emotion-40 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-40 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-40 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-40 .uc-fe-switch-inner {
  color: #15ad31;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #e6ffed;
}

.emotion-40 .uc-fe-switch-button {
  left: 100%;
  margin-left: -19px;
}

.emotion-40 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-40 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-99 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-99 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-99 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-99 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-99 .uc-fe-numberinput-handler-up,
.emotion-99 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-99 .uc-fe-numberinput-handler-up:hover,
.emotion-99 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-99 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-99 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-99 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-99 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99:hover {
  border-color: #c3cad9;
}

.emotion-99 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-99 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-99 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-99 .uc-fe-numberinput-handler-up,
.emotion-99 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-99 .uc-fe-numberinput-handler-up:hover,
.emotion-99 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-99 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-99 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-95 {
  vertical-align: baseline;
}

.emotion-109 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-109:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-107 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-107 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-29 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-29 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-29 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-29 .uc-fe-switch-tip-on,
.emotion-29 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-29 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29:hover {
  border-color: #3357df;
}

.emotion-29:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-29 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-29 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-29 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-29 .uc-fe-switch-tip-on,
.emotion-29 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-29 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-29 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-29 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-40 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-40 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-40 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-40 .uc-fe-switch-tip-on,
.emotion-40 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-40 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-40:hover {
  border-color: #3357df;
}

.emotion-40:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-40 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-40 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-40 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-40 .uc-fe-switch-tip-on,
.emotion-40 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-40 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-40 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-40 .uc-fe-switch-inner {
  color: #15ad31;
  border-color: #9effa5;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #e6ffed;
}

.emotion-40 .uc-fe-switch-button {
  left: 100%;
  margin-left: -19px;
}

.emotion-40 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-40 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-99 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-99 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-99 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-99 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-99 .uc-fe-numberinput-handler-up,
.emotion-99 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-99 .uc-fe-numberinput-handler-up:hover,
.emotion-99 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-99 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-99 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-99 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-99 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-99:hover {
  border-color: #c3cad9;
}

.emotion-99 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-99 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-99 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-99 .uc-fe-numberinput-handler-up,
.emotion-99 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-99 .uc-fe-numberinput-handler-up:hover,
.emotion-99 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-99 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-99 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-95 {
  vertical-align: baseline;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-107 emotion-108"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        visible
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-29 emotion-30"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        closable
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          checked=""
          class=" emotion-40 emotion-30"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        mask
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          checked=""
          class=" emotion-40 emotion-30"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        maskClosable
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          checked=""
          class=" emotion-40 emotion-30"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        keyboard
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          checked=""
          class=" emotion-40 emotion-30"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        destroyOnClose
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-29 emotion-30"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        zIndex
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-99 emotion-100"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-95 emotion-96"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-95 emotion-96"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-109 emotion-110"
      type="button"
    >
      Toggle Visible
    </button>
  </div>
</div>
`;

exports[`Modal demo -- popupContainer 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05);
  border-radius: 4px;
}

.emotion-10 .uc-fe-card-header:last-child,
.emotion-10 .uc-fe-card-action:last-child,
.emotion-10 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-10 .uc-fe-card-header:first-child,
.emotion-10 .uc-fe-card-action:first-child,
.emotion-10 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-10 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-10 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-10 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-10 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05);
  border-radius: 4px;
}

.emotion-10 .uc-fe-card-header:last-child,
.emotion-10 .uc-fe-card-action:last-child,
.emotion-10 .uc-fe-card-content:last-child {
  margin-bottom: 24px;
}

.emotion-10 .uc-fe-card-header:first-child,
.emotion-10 .uc-fe-card-action:first-child,
.emotion-10 .uc-fe-card-content:first-child {
  margin-top: 24px;
}

.emotion-10 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-10 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-10 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

<div>
  <h3>
    Modal 会拦截外层的 getPopupContainer
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-10 emotion-11"
    >
      <div />
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        Test 0
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        Test 1
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        Test 2
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        Test 3
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        Test 4
      </button>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-10 emotion-11"
    >
      <div />
      <div>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Test 0
        </button>
      </div>
      <div>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Test 1
        </button>
      </div>
      <div>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Test 2
        </button>
      </div>
      <div>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Test 3
        </button>
      </div>
      <div>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          type="button"
        >
          Test 4
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal demo -- size 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    sm
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    md
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    lg
  </button>
</div>
`;

exports[`Modal demo -- titleAndFooter 1`] = `
.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-0:hover {
  color: #3860f4;
  fill: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
    type="button"
  >
    click
  </button>
</div>
`;
